# pdfscribe

./: .gitignore  README.md  main.py  pyproject.toml
src/pdfscribe/: __init__.py  batch_cli.py  cache.py  cli.py  config.py  hashutil.py  rate_limit.py  run_index.py
src/pdfscribe/models/: schema.py
src/pdfscribe/pipeline/: assets.py  describe_page.py  parse_pdf.py  prefilter.py  vlm.py  vlm_simple.py
